added tor-exit-notice installation

--- a/misc/tor-exit-notice.html
+++ b/misc/tor-exit-notice.html
@@ -121,7 +121,7 @@ response</a> for more information on this matter.</p>
 
 <p>
 That being said, if you still have a complaint about the router,  you may
-email the <a href="mailto:%MAIL%">maintainer</a>. If
+email the <a href="mailto:FIXME_YOUR_EMAIL_ADDRESS">maintainer</a>. If
 complaints are related to a particular service that is being abused, I will
 consider removing that service from my exit policy, which would prevent my
 router from allowing that traffic to exit through it. I can only do this on an
